js/js.translator/testData/incremental/invalidation/multiPlatformSimple/lib1/common/l1common.0.kt
expect fun lib1CommonFun(): Int

fun lib1Fun() = lib1CommonFun() + 1
